# thoth

./: .gitignore  Cargo.toml  KEYBOARD_SHORTCUTS.md  NAVIGATION_TEST_GUIDE.md  README.md  REFACTORING_PLAN.md  build.rs  cobertura.xml  dist-workspace.toml  install.ps1  install.sh  rustfmt.toml
.claude/plans/: navigation-features.md
.github/workflows/: badges.yml  bench.yml  ci.yml  create-release.yml  deploy-pages.yml  release.yml  rust.yml
assets/: Info.plist  Thoth.icns  thoth.desktop  thoth_icon.psd
assets/wix/: file-type-icons.wxs  main.wxs
backup/common_components/: breadcrumbs.rs  input.rs  modal.rs  select.rs  table_view.rs  tabs.rs  typography.rs
benches/: file_loading.rs  parsing.rs  search.rs
design_handoff_multi_tab/: README.md  Thoth Tabs.html
design_handoff_multi_tab/assets/: colors_and_type.css
design_handoff_multi_tab/tabs/: app.jsx  data.js  json-tree.jsx  layout.jsx  plugins.jsx  state.jsx
design_handoff_seshat_db_plugin/: PRD.md  README.md  Seshat.html  app.jsx  chrome.jsx  data.js  editor.jsx  palette.jsx  panes.jsx  results.jsx  views.jsx
docs/: BADGE_SETUP.md  COMPONENT_ARCHITECTURE.md  CONFIGURATION.md  DATABASE_PLUGINS.md  DESIGN_SYSTEM.md  FILE_ASSOCIATIONS.md  KEYBOARD_SHORTCUTS.md  MCP_SERVER.md  PLUGIN_SYSTEM.md  PROFILING.md  RELEASE_PROCESS.md  SEARCH_RESULT_HIGHLIGHTING.md  TESTING_ARCHITECTURE.md
plugins/csv-loader/: Cargo.toml  plugin.toml
plugins/csv-loader/src/: bindings.rs  lib.rs
plugins/material-theme/: plugin.toml  theme.json
plugins/seshat/: Cargo.toml  plugin.toml
plugins/seshat/src/: bindings.rs  constants.rs  db.rs  events.rs  lib.rs  mysql.rs  pg.rs  shim.rs  sql.rs  state.rs  ui.rs
plugins/seshat/src/ui/: connections.rs  dialog.rs  editor.rs  error.rs  history.rs  mod.rs  results.rs  schema.rs  sidebar.rs  structure.rs  widgets.rs
plugins/url-source/: Cargo.toml  plugin.toml
plugins/url-source/src/: bindings.rs  helper.rs  http.rs  lib.rs  ui.rs
rfcs/: 0001-mcp-server.md
src/: constants.rs  lib.rs  load_file.rs  main.rs  path_registry.rs  recent_files.rs  settings.rs  shortcuts.rs  state.rs  theme.rs
src/app/: file_picker.rs  mod.rs  persistent_state.rs  search_handler.rs  shortcut_handler.rs  tab_manager.rs  thoth_app.rs  update_handler.rs
src/components/: bookmarks.rs  breadcrumbs.rs  button.rs  card.rs  central_panel.rs  chart_window.rs  data_row.rs  data_source_panel.rs  datasets_panel.rs  drag_and_drop.rs  error_modal.rs  go_to_path_dialog.rs  icon_button.rs  json_viewer.rs  list.rs  mod.rs  recent_files.rs  search.rs  search_dropdown.rs  settings_dialog.rs  settings_panel.rs  sidebar.rs  status_bar.rs  table_view.rs  theme.rs  toggle_switch.rs  toolbar.rs  top_bar.rs  traits.rs  update_consent_modal.rs  welcome.rs
src/consent/: manager.rs  mod.rs  modal.rs
src/error/: handler.rs  mod.rs  recovery.rs  types.rs
src/file/: detect_file_type.rs  lazy_loader.rs  mod.rs  to_dataset.rs
src/helpers/: format.rs  json_copy_to_clipboard.rs  lru_cache.rs  mod.rs  scroll.rs
src/mcp/: mod.rs  server.rs  state.rs  tests.rs  tools.rs
src/notification/: mod.rs  notification_dropdown.rs
src/platform/: archive.rs  file_io.rs  file_open_channel.rs  fonts.rs  fs.rs  macos.rs  mod.rs  native_menu.rs  path_registry.rs
src/plugin/: datasets.rs  manager.rs  mod.rs  network_policy.rs  plugin_registry.rs  plugin_ui_host.rs  render_node.rs  signals.rs  theme_plugin.rs  wasm_data_source.rs  wasm_file_viewer_loader.rs  wasm_loader.rs  wasm_plugin_settings.rs  wasm_ui_component.rs  websocket.rs
src/search/: engine.rs  jsonpath.rs  mod.rs  results.rs
src/state/: tests.rs
src/theme/: constants.rs  mod.rs
src/update/: manager.rs  mod.rs  types.rs
src/window/: mod.rs  (+1 more)
tests/: component_tests.rs  file_association_tests.rs  file_loading_tests.rs  property_tests.proptest-regressions  property_tests.rs
thoth-plugin-sdk/: Cargo.toml  LICENSE  README.md
thoth-plugin-sdk-macros/: Cargo.toml
thoth-plugin-sdk-macros/src/: lib.rs
thoth-plugin-sdk/examples/: gallery.rs
thoth-plugin-sdk/src/: helpers.rs  lib.rs  prelude.rs  settings.rs  state.rs  tokens.rs  wire.rs
thoth-plugin-sdk/src/components/: helpers.rs  layout.rs  mod.rs  size.rs
thoth-plugin-sdk/src/components/badge/: mod.rs
thoth-plugin-sdk/src/components/breadcrumbs/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/button/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/button_group/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/card/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/checkbox/: mod.rs
thoth-plugin-sdk/src/components/code/: mod.rs
thoth-plugin-sdk/src/components/code_editor/: mod.rs
thoth-plugin-sdk/src/components/data_row/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/icon/: mod.rs
thoth-plugin-sdk/src/components/icon_button/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/input/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/json_tree/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/key_value_list/: mod.rs
thoth-plugin-sdk/src/components/link/: mod.rs
thoth-plugin-sdk/src/components/list/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/markdown/: mod.rs
thoth-plugin-sdk/src/components/modal/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/multi_select/: mod.rs
thoth-plugin-sdk/src/components/number_input/: mod.rs
thoth-plugin-sdk/src/components/progress/: mod.rs
thoth-plugin-sdk/src/components/radio/: mod.rs
thoth-plugin-sdk/src/components/select/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/separator/: mod.rs
thoth-plugin-sdk/src/components/sidebar_header/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/slider/: mod.rs
thoth-plugin-sdk/src/components/spinner/: mod.rs
thoth-plugin-sdk/src/components/table_view/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/tabs/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/toggle_switch/: mod.rs  ui.rs
thoth-plugin-sdk/src/components/typography/: mod.rs  ui.rs
thoth-plugin-sdk/src/render_node/: mod.rs  render.rs
thoth-plugin-sdk/src/theme/: mod.rs
website/: .gitignore  astro.config.mjs
wit/: thoth-plugin.wit
wix/: main.wxs
(+80 files in other folders)
