[package]
name = "thoth"
version = "0.3.1"
edition = "2024"
repository = "https://github.com/anitnilay20/thoth"
authors = ["Anit Nilay <anit.nilay20@gmail.com>"]
description = "Thoth is a fast, desktop JSON/NDJSON viewer built with Rust + egui. It opens ~500 MB files by lazily parsing only visible/expanded nodes, keeps the UI responsive with an LRU cache and parallel search, and ships with an Andromeda-themed light/dark UI."
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.85"

[package.metadata.release]
# Don't publish to crates.io (this is a desktop app)
publish = false

# Sign commits and tags
sign-commit = false
sign-tag = false

# Push to remote after tagging
push = true

# Create git tag with 'v' prefix (e.g., v0.2.5)
tag-name = "v{{version}}"

# Commit message template
pre-release-commit-message = "chore: release v{{version}}"

[lib]
name = "thoth"
path = "src/lib.rs"

[[bin]]
name = "thoth"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true

# cargo-packager configuration (stable cross-platform bundler)
[package.metadata.packager]
product_name = "Thoth"
identifier = "com.thoth.app"
category = "DeveloperTool"
copyright = "Copyright (c) Anit Nilay 2024. All rights reserved."
publisher = "Anit Nilay"
homepage = "https://github.com/anitnilay20/thoth"
license_file = "LICENSE"

# Icon configuration for different platforms
icons = ["assets/thoth_icon_256.png", "assets/Thoth.icns", "assets/thoth_icon_256.ico"]

# Resources to include in the bundle
resources = ["assets"]

# macOS bundle configuration
[package.metadata.packager.macos]
# File associations for macOS "Open With" and default app
files = [
  { ext = ["json"], name = "JSON File", role = "Editor", mime = "application/json" },
  { ext = ["ndjson", "jsonl"], name = "NDJSON File", role = "Editor", mime = "application/x-ndjson" },
  { ext = ["geojson"], name = "GeoJSON File", role = "Editor", mime = "application/geo+json" },
]

# Windows installer configuration
[package.metadata.packager.windows]
# File associations for Windows "Open With" and default app
file_associations = [
  { ext = ["json"], name = "JSON File", description = "JSON File", icon = "assets/thoth_icon_256.ico", role = "Editor", mime = "application/json" },
  { ext = ["ndjson", "jsonl"], name = "NDJSON File", description = "Newline Delimited JSON File", icon = "assets/thoth_icon_256.ico", role = "Editor", mime = "application/x-ndjson" },
  { ext = ["geojson"], name = "GeoJSON File", description = "GeoJSON File", icon = "assets/thoth_icon_256.ico", role = "Editor", mime = "application/geo+json" },
]

# Debian/Linux package configuration
[package.metadata.packager.deb]
depends = ["libgtk-3-0", "libwebkit2gtk-4.1-0"]
desktop_template = "assets/thoth.desktop"


[dependencies]
eframe = "0.32.0"
egui-phosphor = "0.10"
image = { version = "0.25", default-features = false, features = [
  "png",
  "ico",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
rfd = "0.15.4"
anyhow = "1.0"
rayon = "1.11.0"
memchr = "2.7"
self_update = { version = "0.41", features = ["archive-tar", "archive-zip", "compression-flate2"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.42", features = ["rt", "sync"] }
chrono = "0.4"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
open = "5.0"
which = "7.0"

[dependencies.puffin]
git = "https://github.com/EmbarkStudios/puffin"
optional = true

[dependencies.puffin_egui]
git = "https://github.com/EmbarkStudios/puffin"
optional = true

[dependencies.dhat]
version = "0.3"
optional = true

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.15"

[features]
default = []
profiling = ["puffin", "puffin_egui", "dhat"]

[[bench]]
name = "file_loading"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "parsing"
harness = false
