[workspace]
members = [".", "plugins/csv-loader", "plugins/url-source", "plugins/seshat", "thoth-plugin-sdk", "thoth-plugin-sdk-macros"]
# Plugins are wasm32 crates built separately with `cargo component build`.
# default-members restricts `cargo build` / `cargo check` at the workspace
# root to the host application only, so plugins are not compiled for the
# host target by default.
default-members = ["."]

[package]
name = "thoth"
version = "0.4.0"
edition = "2024"
repository = "https://github.com/anitnilay20/thoth"
authors = ["Anit Nilay <anit.nilay20@gmail.com>"]
description = "Thoth is a fast, native desktop workspace for exploring your data. It opens gigabyte-sized JSON/NDJSON by lazily parsing only what you view, and reaches beyond files through sandboxed WebAssembly plugins — load CSVs, call REST APIs, and query PostgreSQL & MySQL. Built with Rust + egui."
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.92"

[package.metadata.release]
# Don't publish to crates.io (this is a desktop app)
publish = false

# Sign commits and tags
sign-commit = false
sign-tag = false

# Push to remote after tagging
push = true

# Create git tag with 'v' prefix (e.g., v0.2.5)
tag-name = "v{{version}}"

# Commit message template
pre-release-commit-message = "chore: release v{{version}}"

[lib]
name = "thoth"
path = "src/lib.rs"

[[bin]]
name = "thoth"
path = "src/main.rs"

# cargo-packager configuration (stable cross-platform bundler)
[package.metadata.packager]
product_name = "Thoth"
identifier = "com.thoth.app"
category = "DeveloperTool"
copyright = "Copyright (c) Anit Nilay 2024. All rights reserved."
publisher = "Anit Nilay"
homepage = "https://github.com/anitnilay20/thoth"
license_file = "LICENSE"

# Icon configuration for different platforms
icons = [
  "assets/thoth_icon_256.png",
  "assets/Thoth.icns",
  "assets/thoth_icon_256.ico",
]

# Resources to include in the bundle
resources = ["assets"]

# File associations (top-level — applies to all platforms cargo-packager supports)
file_associations = [
  { extensions = ["json"], name = "JSON File", description = "JSON File", role = "editor", mime_type = "application/json" },
  { extensions = ["ndjson", "jsonl"], name = "NDJSON File", description = "Newline Delimited JSON File", role = "editor", mime_type = "application/x-ndjson" },
  { extensions = ["geojson"], name = "GeoJSON File", description = "GeoJSON File", role = "editor", mime_type = "application/geo+json" },
]

# macOS bundle configuration
[package.metadata.packager.macos]
# File associations are declared in a custom Info.plist (CFBundleDocumentTypes).
# cargo-packager merges this with its auto-generated plist.
info_plist_path = "assets/Info.plist"

# Windows installer configuration
[package.metadata.packager.windows]

# WiX fragment that writes DefaultIcon registry entries for each file type.
# cargo-packager generates ProgIds as "<identifier>.<extension>" (e.g. com.thoth.app.json).
[package.metadata.packager.wix]
fragment_paths = ["assets/wix/file-type-icons.wxs"]
component_group_refs = ["FileTypeIconsGroup"]

# Debian/Linux package configuration
[package.metadata.packager.deb]
depends = ["libgtk-3-0", "libwebkit2gtk-4.1-0"]
desktop_template = "assets/thoth.desktop"

# Install per-MIME-type icons for the XDG icon theme so file managers show the
# Thoth icon next to json/ndjson/geojson files.  The filename convention is
# <mime-type-with-slash-replaced-by-dash>.png under hicolor/256x256/mimetypes/.
[package.metadata.packager.deb.files]
"assets/mime/application-json.png" = "/usr/share/icons/hicolor/256x256/mimetypes/application-json.png"
"assets/mime/application-x-ndjson.png" = "/usr/share/icons/hicolor/256x256/mimetypes/application-x-ndjson.png"
"assets/mime/application-geo+json.png" = "/usr/share/icons/hicolor/256x256/mimetypes/application-geo+json.png"


[dependencies]
thoth-plugin-sdk = { path = "thoth-plugin-sdk", features = ["egui"] }
eframe = "0.34"
egui-phosphor = "0.12"
image = { version = "0.25", default-features = false, features = [
  "png",
  "ico",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
fontdb = "0.23"
rfd = "0.15.4"
anyhow = "1.0"
rayon = "1.11.0"
memchr = "2.7"
self_update = { version = "0.41", features = [
  "archive-tar",
  "archive-zip",
  "compression-flate2",
] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "macros", "io-std"] }
chrono = "0.4"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
sha2 = "0.10"
open = "5.0"
which = "7.0"
wasmtime = { version = "43.0.0", features = ["component-model", "cache"] }
wasmtime-wasi = "43.0.0"
wasmtime-wasi-http = "43"
# Host-terminated TLS for the plugin tcp-client import.
rustls = "0.23"
webpki-roots = "0.26"
# OS keychain for the plugin secure-storage import.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
wit-bindgen = "0.54.0"
egui-notify = "0.22.0"
egui_extras = "0.34.1"
tempfile = "3.15"
egui_code_editor = "0.2.24"
egui_commonmark = "0.23"
egui_dock = "0.19"
raw-window-handle = "0.6.2"
rmcp = { version = "1.5", features = ["server", "transport-io", "macros"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.puffin]
git = "https://github.com/EmbarkStudios/puffin"
optional = true

[dependencies.dhat]
version = "0.3"
optional = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
muda = "0.19.2"

[dev-dependencies]
proptest = "1.5"
criterion = { version = "0.5", features = ["html_reports"] }
# Integration tests render components that use Phosphor glyphs (DataRow caret,
# IconButton); register the font in the test egui context so they don't panic.
egui-phosphor = "0.12"

[features]
default = []
profiling = ["puffin", "dhat"]

[[bench]]
name = "file_loading"
harness = false

[[bench]]
name = "search"
harness = false

[[bench]]
name = "parsing"
harness = false
