[package]
name = "thoth-plugin-sdk-macros"
version = "0.1.0"
edition = "2021"
description = "Derive macros for thoth-plugin-sdk (PluginMeta)."
authors = ["Anit Nilay <anit.nilay20@gmail.com>"]
license = "MIT"
repository = "https://github.com/anitnilay20/thoth"
homepage = "https://github.com/anitnilay20/thoth"
keywords = ["thoth", "plugin", "derive", "macro"]
categories = ["development-tools::procedural-macro-helpers"]
rust-version = "1.92"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
