[package]
name = "seshat"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"] # required for WASM component output

[dependencies]
# Runtime support for cargo-component generated bindings.
wit-bindgen-rt = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Postgres wire-protocol codec (transport-agnostic; driven over the host
# tcp-client shim). The high-level `postgres`/`tokio-postgres` crates open their
# own sockets and won't compile to wasm32-wasip1 — this is just the codec.
postgres-protocol = "0.6"
bytes = "1"
fallible-iterator = "0.2"
# MySQL auth scrambles (mysql_native_password / caching_sha2_password). The
# MySQL wire protocol itself is hand-rolled in `mysql.rs` over the tcp shim.
sha1 = "0.10"
sha2 = "0.10"
# caching_sha2_password full auth without TLS: RSA-OAEP encrypt the password
# with the server's public key. `rand` (getrandom's wasi backend) seeds OAEP.
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
sqlformat = "0.5.0"
# Type-safe UI DSL builders (no egui — plugins only describe UI, never render).
thoth-plugin-sdk = { path = "../../thoth-plugin-sdk", features = ["plugin"] }

[package.metadata.component]
package = "thoth:seshat"

[package.metadata.component.target]
path = "../../wit"
world = "data-source-plugin"
