[package]
name = "url-source"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]   # required for WASM component output

[dependencies]
# Runtime support for cargo-component generated bindings (must match the version
# cargo-component uses internally — check with: head -3 src/bindings.rs)
wit-bindgen-rt = "0.41"
serde_json     = "1"
serde = {version = "1", features = ["derive"] }
base64 = "0.22"
# Type-safe UI DSL builders (no egui — plugins only describe UI, never render).
thoth-plugin-sdk = { path = "../../thoth-plugin-sdk", features = ["plugin"] }

[package.metadata.component]
package = "thoth:url-source"

[package.metadata.component.target]
path  = "../../wit"
world = "data-source-plugin"
